baml_language/crates/baml_tests/tests/snapshots/type_aliases__alias_in_return_type_annotation.snap
---
source: crates/baml_tests/tests/type_aliases.rs
expression: output.bytecode
---
function main() -> Foo {
    alloc_instance Foo
    copy 0
    load_const 5
    store_field .x
    return
}
