baml_language/crates/baml_tests/tests/snapshots/type_aliases__alias_param_field_access.snap
---
source: crates/baml_tests/tests/type_aliases.rs
expression: output.bytecode
---
function main() -> int {
    alloc_instance Pair
    copy 0
    load_const 3
    store_field .a
    copy 0
    load_const 4
    store_field .b
    call sum
    return
}

function sum(p: Pair) -> int {
    load_var p
    load_field .a
    load_var p
    load_field .b
    bin_op +
    return
}
