baml_language/crates/baml_tests/tests/snapshots/type_aliases__field_access_through_alias.snap
---
source: crates/baml_tests/tests/type_aliases.rs
expression: output.bytecode
---
function main() -> int {
    alloc_instance Foo
    copy 0
    load_const 7
    store_field .x
    load_field .x
    return
}
