baml_language/crates/baml_tests/tests/snapshots/type_aliases__struct_literal_through_alias.snap
---
source: crates/baml_tests/tests/type_aliases.rs
expression: output.bytecode
---
function main() -> Foo {
    alloc_instance Foo
    copy 0
    load_const 1
    store_field .x
    return
}
